# self_update_test

./: Cargo.toml  release.sh
src/: lib.rs  main.rs
