[package]
name = "self_update_test"
version = "0.1.8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "self_update_test"
path = "src/lib.rs"

[[bin]]
name = "self_update_test"
path = "src/main.rs"


[dependencies]
surf = "2.3.2"
anyhow = "1.0.69"
futures = "0.3.26"
semver = "1.0.16"
